<resources>
    <string name="app_name">The big6 Project App Store</string>
    <string name="app_icon">App Icon</string>
    <string name="install">Install</string>
    <string name="about_this_app">About this app</string>
    <string name="download_size">Download Size</string>
    <string name="version">Version</string>
    <string name="updated_on">Updated On</string>
    <string name="what_s_new">What\'s New</string>
    <string name="screenshot">Screenshot</string>
</resources>