<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppDetailsActivity">

    <ImageView
        android:id="@+id/appDetailsIconImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/appDetailsNameTextView"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:id="@+id/appDetailsNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appDetailsIconImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/installButton"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/installButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/install"
        app:layout_constraintBottom_toTopOf="@id/Divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appDetailsNameTextView" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/Divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/installButton"
        app:layout_constraintBottom_toTopOf="@id/AboutThisApp" />

    <TextView
        android:id="@+id/AboutThisApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_app"
        app:layout_constraintTop_toBottomOf="@id/Divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AboutThisApp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appDetailsDescriptionTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/Divider4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/Divider4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/appDetailsDescriptionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appDetailsScreenshotRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/Divider3"
                app:layout_constraintTop_toBottomOf="@id/Divider4" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/Divider3"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/appDetailsScreenshotRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/WhatsNew"
                android:text="@string/what_s_new"
                android:layout_marginStart="25dp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Divider3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/appDetailsWhatsNewTextView"
                app:layout_constraintTop_toBottomOf="@id/WhatsNew"
                android:layout_marginTop="2dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/Divider2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/appDetailsWhatsNewTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/Version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toBottomOf="@id/Divider2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/appDetailsVersionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Divider2" />

            <TextView
                android:id="@+id/UpdatedOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Version"
                android:text="@string/updated_on"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/appDetailsUpdatedOnTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appDetailsVersionTextView" />

            <TextView
                android:id="@+id/DownloadSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/UpdatedOn"
                android:text="@string/download_size"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/appDetailsDownloadSizeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appDetailsUpdatedOnTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>